src/page/style/root.module.css
/* ... */
.testimoni>.container_wrap .title {
    width: 95%;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.testimoni>.cards {
    display: grid;
    grid-template-columns: repeat(3, 360px);
    gap: 2rem;
    padding: 1.25rem;
    margin: 0 auto;
    overflow: hidden;
}

.testimoni>.content {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    padding: 0 1.25rem 1.25rem 1.25rem;
    overflow: hidden;
}

.testimoni .content>.cards {
    display: flex;
    gap: 2rem;
}

.testimoni .content>.cards:nth-child(1) {
    flex-direction: row;
}

.testimoni .content>.cards:nth-child(2) {
    flex-direction: row-reverse;
}

.testimoni .content>.cards>.card {
    min-width: 360px;
}

.testimoni .card {
    display: grid;
    grid-template-rows: 40px 1fr 55px;
    height: 260px;
    width: 360px;
    overflow: hidden;
    padding: 1.5rem;
    background-color: var(--box-boxContent-bg);
    border: 1px solid var(--box-borderColor2);
    border-radius: 1rem;
    box-shadow: var(--box-boxContent-boxShadow);
    transition: box-shadow var(--transition-default) ease-in-out;
}

.testimoni .card .stars,
.testimoni .card .user {
    padding: 0 1rem;
}

.testimoni .card .review {
    padding: 0.5rem 1rem;
}

.testimoni .card .stars {
    --star-fontsize: 1.5rem;
    display: flex;
    align-items: center;
    color: var(--warning-color);
}

.testimoni .card .review {
    overflow: hidden;
    text-align: justify;
    font-size: var(--root-default-fontsize);
    color: var(--dark-color);
}

.testimoni .card .user {
    display: grid;
    grid-template-columns: max-content 1fr;
    align-items: center;
    gap: 0.75rem;
    overflow: hidden;
}

.testimoni .card .user .avatar {
    --avatar-size: 37.5px;
    width: var(--avatar-size);
    height: var(--avatar-size);
    border-radius: 50%;
    background-color: var(--logo-second-color);
}

.testimoni .card .user .info {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.testimoni .card .user .info span,
.testimoni .card .user .info small {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.testimoni .card .user .info span {
    font-weight: 500;
    font-size: var(--root-default-fontsize);
}

.testimoni .card .user .info small {
    color: var(--darkVariant2-color);
    font-size: var(--root-description-fontsize);
}

/* #endregion */

/* #region Section 'Mulai Sekarang' */

.mulai_sekarang {
    --inner-padding: 2rem;
    --logo-size: 128px;
    height: var(--root-section-height);
    padding: var(--inner-padding);
    overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

.mulai_sekarang .logo {
    margin-bottom: .5rem;
}

.mulai_sekarang .logo {
    position: relative;
    width: var(--logo-size);
    height: var(--logo-size);
}

.mulai_sekarang .logo img {
    filter: drop-shadow(5px 10px 5px var(--logo-drop-shadow));
}

.mulai_sekarang .title_big {
    margin-bottom: .5rem;
}

.mulai_sekarang .title_big_description {
    width: 500px;
    text-align: center;
    margin-bottom: 2rem;
}

.mulai_sekarang .title_big_description>span {
    will-change: transform;
    transform-origin: 0% 50%;
}

.mulai_sekarang .title_big_description span {
    display: inline-block;
}

.mulai_sekarang .title_big_description span .word {
    margin: 0 .2rem .2rem 0;
}

.mulai_sekarang .title_big_description mark {
    font-weight: 500;
}

.mulai_sekarang .title_big_description mark>span>span {
    margin: 0 .2rem .2rem 0;
}

.mulai_sekarang .title_big_cta {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1.5rem;
    width: 275px;
}

.mulai_sekarang .title_big_cta .btn {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: .65rem;
    height: 45px;
    background-color: var(--white-color);
    border-radius: 1.1rem;
    cursor: pointer;
}

.mulai_sekarang .title_big_cta .btn.main {
    background-color: var(--logo-second-color);
    color: var(--white-color);
}

.mulai_sekarang .title_big_cta .btn.secondary {
    background-color: var(--accordion-bg-color);
}

/* #endregion Section 'Mulai Sekarang' */

/* #region Footer */

.footer_outter {
    --small-fontsize: .85rem;
    width: 100%;
    margin: 0 auto;
    padding: 0 0;
    overflow: hidden;
    font-size: var(--root-default-fontsize);
    background-color: var(--root-footer-bgColor);
    color: var(--root-footer-textColor);
}

.footer_wrapper {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    width: 1280px;
    padding-left: 2rem;
    padding-right: 2rem;
}

.footer {
    padding: 2.5rem 0;
}

.footer .primary a {
    color: var(--root-footer-textColor);
}

.footer .primary,
.footer .secondary {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.footer .primary {
    position: relative;
    padding: 1.25rem 0;
    margin: 1rem 1.5rem 0 1.5rem;
}

.footer .line {
    --line-height: 1px;
    width: calc(100% - (2 * 1.5rem));
    height: var(--line-height);
    margin: 0 auto;
    background-color: var(--root-footer-lineColor);
}

.footer .brand {
    --brand-size: 60px;
    width: var(--brand-size);
    height: var(--brand-size);
    font-size: var(--root-title-fontsize);
    cursor: pointer;
}

.footer .shorcut {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    justify-content: center;
    width: 100%;
    max-width: calc(100% - 200px - (2 * 4rem));
    gap: 3.5rem;
}

.footer .shorcut a {
    display: block;
    cursor: pointer;
}

.footer .shorcut a svg.external {
    font-size: calc(0.85 * 1em);
}

.footer .socials {
    --box-size: 32.5px;
    display: flex;
    gap: 0.75rem;
}
/* ... */

